# dpowcoin

./: CMakeLists.txt  configure.ac
.github/workflows/: ci.yml  dpowcoin-build.yml
contrib/: dpowcoin-loadsnapshot.sh  dpowcoin-snapshot.sh
contrib/devtools/: README.md  bench_argon2_cache.sh  check-deps.sh  circular-dependencies.py  copyright_header.py  dpowcoin_perf_profile.sh  gen-bitcoin-conf.sh  gen-manpages.py  headerssync-params.py  utils.py
contrib/guix/: manifest.scm
contrib/init/: README.md  dpowcoind.conf  dpowcoind.openrc  dpowcoind.service
contrib/signet/: miner
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  dpowcoin-genesis.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  (+6 more)
doc/design/: assumeutxo.md  libraries.md  multiprocess.md
doc/dpowcoin/: consensus-audit.md  perf-baseline.md
doc/man/: dpowcoin-cli.1  dpowcoin-qt.1  dpowcoin-tx.1  dpowcoin-util.1  dpowcoin-wallet.1  dpowcoin.1  dpowcoind.1
doc/policy/: mempool-limits.md  mempool-replacements.md  packages.md
doc/release-notes/: release-notes-0.10.0.md  release-notes-0.10.1.md  release-notes-0.10.2.md  release-notes-0.10.3.md  release-notes-0.10.4.md  release-notes-0.11.0.md  release-notes-0.11.1.md  release-notes-0.11.2.md  release-notes-0.12.0.md  release-notes-0.12.1.md  release-notes-0.13.0.md  release-notes-0.13.1.md  release-notes-0.13.2.md  release-notes-0.14.0.md  release-notes-0.14.1.md  release-notes-0.14.2.md  release-notes-0.14.3.md  release-notes-0.15.0.1.md  release-notes-0.15.0.md  release-notes-0.15.1.md  release-notes-0.15.2.md  release-notes-0.16.0.md  release-notes-0.16.1.md  release-notes-0.16.2.md  release-notes-0.16.3.md  release-notes-0.17.0.1.md  release-notes-0.17.0.md  release-notes-0.17.1.md  release-notes-0.18.0.md  release-notes-0.18.1.md  release-notes-0.19.0.1.md  release-notes-0.19.1.md  release-notes-0.20.0.md  release-notes-0.20.1.md  release-notes-0.20.2.md  release-notes-0.21.0.md  release-notes-0.21.1.md  release-notes-0.21.2.md  release-notes-0.3.12.md  release-notes-0.3.13.md  (+63 more)
scripts/: apply-custom-layer.sh  rebrand.sh
share/: setup.nsi.in
share/examples/: dpowcoin.conf
src/: CMakeLists.txt  Makefile.am  Makefile.test.include  bitcoin-chainstate.cpp  bitcoin-util.cpp  chain.h  chainparamsseeds.h  headerssync.cpp  init.cpp  net_processing.cpp  pow.cpp  pow.h  pow_cache.cpp  pow_cache.h  validation.cpp  validation.h
src/bench/: CMakeLists.txt  dpowcoin_pow.cpp
src/common/: args.cpp
src/consensus/: amount.h  params.h  tx_check.cpp  validation.h
src/crypto/: CMakeLists.txt
src/crypto/argon2d/: argon2.cpp  argon2.h  argon2_core.cpp  argon2_core.h  argon2_encoding.cpp  argon2_encoding.h  argon2_opt.cpp  argon2_opt_avx2.cpp  argon2_opt_avx512.cpp  argon2_opt_neon.cpp  argon2_opt_sse2.cpp  argon2_opt_ssse3.cpp  argon2_ref.cpp  argon2_thread.cpp  argon2_thread.h  argon2_types.h  opt.c
src/crypto/argon2d/blake2/: blake2-impl.h  blake2.h  blake2b.cpp  blamka-round-avx2.h  blamka-round-avx512.h  blamka-round-neon.h  blamka-round-ref.h  blamka-round-sse2.h  blamka-round-ssse3.h
src/init/: bitcoin-gui.cpp  bitcoin-node.cpp  dpowcoin-qt.cpp  dpowcoind.cpp
src/kernel/: chainparams.cpp  chainstatemanager_opts.h  context.cpp
src/node/: blockstorage.cpp  chainstatemanager_args.cpp  miner.cpp
src/primitives/: block.cpp  block.h
src/qt/: CMakeLists.txt  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.cpp  csvmodelwriter.h  dpowcoin.cpp  dpowcoin.h  editaddressdialog.cpp  editaddressdialog.h  freespacechecker.cpp  freespacechecker.h  guiconstants.h  guiutil.cpp  guiutil.h  initexecutor.cpp  initexecutor.h  (+83 more)
src/rpc/: blockchain.cpp  client.cpp  mining.cpp  node.cpp
src/test/: CMakeLists.txt  bip324_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  (+9 more)
(+486 files in other folders)
